--- a/Lab 4 - Alexander_Crone/css/styles.css
+++ b/Lab 4 - Alexander_Crone/css/styles.css
@@ -123,3 +123,9 @@ body {
 #overlappingBtn:hover {
     background-color: #0d8de2;
 }
+
+@media only screen and (max-width: 600px) {
+    #overlappingBtn {
+        width: 42vw;
+    }
+}
