--- a/Lab 6 - Alexander_Crone/css/style1.css
+++ b/Lab 6 - Alexander_Crone/css/style1.css
@@ -68,3 +68,9 @@ footer {
 #overlappingBtn:hover {
     background-color: #0d8de2;
 }
+
+@media only screen and (max-width: 600px) {
+    #overlappingBtn {
+        width: 42vw;
+    }
+}
