--- a/Lab 6 - Alexander_Crone/css/style2.css
+++ b/Lab 6 - Alexander_Crone/css/style2.css
@@ -78,3 +78,9 @@ section {
 #overlappingBtn:hover {
     background-color: #0d8de2;
 }
+
+@media only screen and (max-width: 600px) {
+    #overlappingBtn {
+        width: 42vw;
+    }
+}
