--- a/styles.css
+++ b/styles.css
@@ -410,7 +410,7 @@ a img:hover {
         position: sticky;
         padding: 20px;
         text-align: center;
-        height: 30%;
+        height: 45vh;
         background-color: #272727;
         flex-direction: column;
         align-items: center;
