--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap');
+
 html,
 body {
     margin: 0;
     padding: 0;
     height: 100%;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "Kalam", cursive;
+    font-weight: 400;
+    font-style: normal;
     background-color: #333;
     color: white;
     scroll-behavior: smooth;
-    cursor: none;
     user-select: none;
 }
 
@@ -68,47 +71,13 @@ body {
     position: absolute;
     width: 100%;
     height: 3px;
-    background: rgb(188, 136, 199) ;
+    background: rgb(188, 136, 199);
     border-radius: 5px;
     left: 0;
     transform-origin: right;
     bottom: -6px;
     transform: scaleX(0);
     transition: transform .5s;
-}
-
-.cursor-dot {
-    width: 5px;
-    height: 5px;
-    background-color: white;
-}
-
-.cursor-outline {
-    width: 30px;
-    height: 30px;
-    border: 2px solid hsla(0, 0%, 100%, 0.5);
-}
-
-.cursor-dot,
-.cursor-outline {
-    position: fixed;
-    top: 0;
-    left: 0;
-    transform: translate(-50%, -50%);
-    border-radius: 50%;
-    z-index: 1;
-    pointer-events: none;
-    transition: .3s;
-}
-
-.cursor-dot.expanded {
-    width: 10px;
-    height: 10px;
-}
-
-.cursor-outline.expanded {
-    width: 40px;
-    height: 40px;
 }
 
 .navigation a:hover::after {
@@ -178,7 +147,6 @@ a {
     text-decoration: none;
     color: white;
     transition: color 0.3s;
-    cursor: none;
 }
 
 a:hover {
@@ -190,7 +158,7 @@ a img:hover {
     transition: .4s;
 }
 
-.navToggle{
+.navToggle {
     display: none;
 }
 
@@ -233,6 +201,10 @@ a img:hover {
 
 .box img:hover {
     filter: opacity(80%);
+}
+
+h3 {
+    height: 7vh;
 }
 
 .box .overlay {
@@ -294,6 +266,30 @@ a img:hover {
 .labBoxDescription {
     padding: 20px;
     padding-top: 0;
+}
+
+.material-symbols-outlined {
+    position: fixed;
+    left: 95%;
+    top: 92%;
+    border-radius: 50%;
+    padding: 20px;
+    cursor: pointer;
+    background-color: rgb(26 25 25 / 89%);
+    box-shadow: 0px 0px black;
+    display: none; /* Initially hide the button */
+    z-index: 9999;
+    transition: opacity 0.3s ease; /* Smooth transition for opacity */
+    /* Ensure it appears above other content */
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 24
+}
+
+.show-button {
+    opacity: 1;
 }
 
 @media only screen and (max-width: 1500px) {
@@ -361,10 +357,9 @@ a img:hover {
     .nav-content {
         display: flex;
         padding: 20px;
-        justify-content: center;
+        justify-content: space-evenly;
         flex-direction: row;
         flex-wrap: wrap;
-        gap: 45px
     }
 
     .navigation a {
@@ -421,4 +416,16 @@ a img:hover {
         display: flex;
         box-shadow: inset 0px 0px 20px 0px black;
     }
+}
+
+@media only screen and (max-width: 1450px) {
+    .material-symbols-outlined {
+        left: 50%;
+    }        
+}
+
+@media only screen and (max-width: 450px) {
+    .material-symbols-outlined {
+        left: 45%;
+    }        
 }
